--- a/Chart.yaml
+++ b/Chart.yaml
@@ -5,3 +5,10 @@ home: https://github.com/ProspePrim
 source:
 type: application
 version: 1.0.0
+dependencies:
+  - name: common
+    repository: https://charts.bitnami.com/bitnami
+    tags:
+      - bitnami-common
+    version: 1.x.x
+engine: gotpl
